[build] 이커머스 DB 접속 정보 및 스키마 정보 수정  - docker-compose.yml  - application.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services:
   mysql:
     image: mysql:8.0
     ports:
-      - "3306:3306"
+      - "3309:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_USER=application
       - MYSQL_PASSWORD=application
-      - MYSQL_DATABASE=hhplus
+      - MYSQL_DATABASE=e_commerce_db
     volumes:
       - ./data/mysql/:/var/lib/mysql
 
