--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,16 +16,20 @@ spring:
     generate-ddl: false
     show-sql: false
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     properties:
       hibernate.timezone.default_storage: NORMALIZE_UTC
       hibernate.jdbc.time_zone: UTC
 
 ---
-spring.config.activate.on-profile: local, test
+spring.config.activate.on-profile: local
 
 spring:
   datasource:
     url: jdbc:mysql://localhost:3309/e_commerce_db?characterEncoding=UTF-8&serverTimezone=UTC
     username: application
     password: application
+
+logging:
+    level:
+        com.example.demo1.DemoService: debug
