--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     name: TestDataSource
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://localhost:3309/e_commerce_db?characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3406/e_commerce_db?characterEncoding=UTF-8&serverTimezone=UTC
     username: application
     password: application
     hikari:
@@ -24,6 +24,27 @@ spring:
       hibernate.timezone.default_storage: NORMALIZE_UTC
       hibernate.jdbc.time_zone: UTC
       hibernate.format_sql: true
+
+  data:
+      redis:
+          host: localhost
+          port: 6479
+          timeout: 2000ms
+          connect-timeout: 2000ms
+
+
+# Redisson 설정
+spring.redis.redisson.config:
+    singleServerConfig:
+        address: "redis://localhost:6479"
+        connectionMinimumIdleSize: 5
+        connectionPoolSize: 10
+        database: 0
+        idleConnectionTimeout: 10000
+        connectTimeout: 2000
+        timeout: 2000
+        retryAttempts: 2
+        retryInterval: 1500
 
 # 테스트 로깅 설정
 logging:
