[refactor, build] 상품 판매량 순위 조회 시 캐싱(Spring-Cache-Redis) 적용 - #38

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,7 @@ spring:
     url: jdbc:mysql://localhost:3406/e_commerce_db?characterEncoding=UTF-8&serverTimezone=UTC
     username: application
     password: application
+  # Spring-cache에 Redis 설정
   data:
     redis:
       host: localhost
