[feat] 인기 상품 판매량 읽기 및 쓰기 추가 개선 버전 문서 작성 (Redis의 Read-Through, Write-Back 적용) - #64

--- a/core/src/test/resources/application.yml
+++ b/core/src/test/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     generate-ddl: true
     show-sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate.timezone.default_storage: NORMALIZE_UTC
       hibernate.jdbc.time_zone: UTC
